se realiza ajuste para sedes por estudiante